[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "charm-lib-interface-tokens"
version = "0.0.1"
authors = [
  {name="Mateo Florido", email="mateo.florido@canonical.com"},
]
description = "Charm library for handling `tokens` relation."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "ops",
  "pydantic==1.*"
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/charmed-kubernetes/charm-lib-tokens"
"Bug Tracker" = "https://github.com/charmed-kubernetes/charm-lib-tokens/issues"
